# swarmpilot_globalqueue

./: .gitignore  API_DOCUMENTATION.md  Predictor.md  README.md  REFACTORING.md  Scheduler.md  api.py  cli.py  example_custom_strategy.py  main.py  pyproject.toml  scheduler.py  scheduler_api.py  strategy.py  strategy_refactored.py  task_instance_client.py  task_instance_client_refactored.py
dev_notes/: 2025-10-06-queue-design.md  README.md
docs/: EXTERNAL_INTERFACES.md  EXTERNAL_INTERFACES_SUMMARY.md  INTEGRATION_GUIDE.md  LOOKUP_PREDICTOR.md  LOOKUP_PREDICTOR_TEST_REPORT.md  PHASE2_TASKS.md  PHASE3_TASKS.md  PREDICTOR_SERVICE.md  QUICK_START_PHASE2.md  REFACTORING_PROGRESS.md  SUMMARY.md  Scheduler.md
examples/: basic_usage.py  config_example.yaml  custom_strategy.py  external_interfaces_usage.py  optimized_scheduler_example.py
src/: __init__.py
src/scheduler/: __init__.py  api.py  async_client.py  client.py  core.py  instance_dispatcher.py  lockfree_model_scheduler.py  lockfree_scheduler_manager.py  lockfree_task_tracker.py  middlewares.py  model_scheduler.py  models.py  optimized_model_scheduler.py  predictor.py  predictor_api.py  predictor_client.py  task_tracker.py  utils.py
src/scheduler/strategies/: __init__.py  base.py  probabilistic.py  quantile_convolution.py  round_robin.py  shortest_queue.py  weighted.py
tests/: conftest.py  test_api.py  test_core.py  test_global_queue.py  test_load_balancing.py  test_lookup_predictor.py  test_predictor_client.py  test_result_notification.py  test_scheduler.py  test_task_tracker.py  test_update_queue.py
