[project]
name = "swarmpilot-globalqueue"
version = "0.1.0"
description = "SwarmPilot Global Queue - Load balancing service for task instances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.10",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "typer>=0.15.2",
    "requests>=2.32.3",
    "scipy>=1.16.2",
    "numpy>=2.3.4",
    "numba>=0.62.1",
    "websockets>=15.0.1",
    "pyinstrument>=5.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
